--- a/HTML.html
+++ b/HTML.html
@@ -5,6 +5,6 @@
     <title>Redirection...</title>
   </head>
   <body>
-    Si vous n'êtes pas redirigé automatiquement, <a href="HTML/index.html">cliquez ici</a>.
+    Si vous n'êtes pas redirigé automatiquement, <a href="html/index.html">cliquez ici</a>.
   </body>
 </html>
