--- a/whatsup.html
+++ b/whatsup.html
@@ -15,7 +15,7 @@
     <section class="bg-white p-6 rounded-lg shadow-md">
       <h2 class="text-xl font-semibold mb-4">🛠️ Historique des mises à jour</h2>
       <ul class="list-disc list-inside space-y-2">
-        <li><strong>07 juin 2025 :</strong> ajout le journal des mises à jour (Whats'up).</li>
+        <li><strong>07 juin 2025 :</strong> Ajout le journal des mises à jour (Whats'up).</li>
         <li><strong>06 juin 2025 :</strong> Correction d’un bug majeur lié à l’ajout du Wiki.</li>
         <li><strong>05 juin 2025 :</strong> Ajout du Wiki FashionFlow avec 9 sections détaillées.</li>
       </ul>
@@ -34,9 +34,14 @@
     </section>
   </main>
 
-  <footer class="bg-gray-200 text-center py-4 mt-10 text-sm text-gray-600">
-    © 2025 FashionFlow - Tous droits réservés • Version 1.3
-  </footer>
-
+  <!-- Zone bouton + mention légale -->
+  <div class="bg-gray-200 text-center py-6 mt-10">
+    <a href="index.html" class="inline-block bg-blue-600 hover:bg-blue-700 text-white font-semibold py-2 px-4 rounded transition duration-300 mb-3">
+      ← Retour à l'accueil
+    </a>
+    <p class="text-gray-800 text-base font-medium mt-2">
+      © 2025 FashionFlow - Tous droits réservés • Version 1.3
+    </p>
+  </div>
 </body>
 </html>
