--- a/whatsup.html
+++ b/whatsup.html
@@ -15,6 +15,7 @@
     <section class="bg-white p-6 rounded-lg shadow-md">
       <h2 class="text-xl font-semibold mb-4">🛠️ Historique des mises à jour</h2>
       <ul class="list-disc list-inside space-y-2">
+       <li><strong>08 juin 2025 :</strong> Bug d'affichage dans la section Introduction et Technologie (wiki)</li>
         <li><strong>07 juin 2025 :</strong> Ajout le journal des mises à jour (Whats'up).</li>
         <li><strong>06 juin 2025 :</strong> Correction d’un bug majeur lié à l’ajout du Wiki.</li>
         <li><strong>05 juin 2025 :</strong> Ajout du Wiki FashionFlow avec 9 sections détaillées.</li>
