--- a/index.html
+++ b/index.html
@@ -1,88 +1,111 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FashionFlow - Bientôt disponible</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>FashionFlow - Bientôt dispo !</title>
   <style>
     body {
-      font-family: 'Arial', sans-serif;
-      background: linear-gradient(to right, #ffdde1, #ee9ca7);
-      color: #333;
+      font-family: 'Segoe UI', 'Arial', sans-serif;
+      background: linear-gradient(to right, #ffe6ec, #f7bacf);
+      color: #222;
       text-align: center;
       padding: 40px 20px;
+      margin: 0;
     }
 
     img.logo {
-      width: 150px;
-      margin: 30px auto 5px;
+      width: 140px;
+      margin: 30px auto 10px;
       display: block;
     }
 
     h1 {
-      font-size: 2.5em;
+      font-size: 2.7em;
+      color: #000;
       margin-bottom: 10px;
     }
 
     p {
       font-size: 1.1em;
       max-width: 600px;
-      margin: auto;
+      margin: 0 auto;
     }
 
     .email-form {
-      margin-top: 30px;
+      margin-top: 40px;
+    }
+
+    .email-form p {
+      margin-bottom: 10px;
     }
 
     .email-form form {
       display: flex;
       flex-direction: column;
       align-items: center;
-      gap: 10px;
-      margin-top: 20px;
+      gap: 12px;
     }
 
     input[type="email"] {
-      padding: 12px;
+      padding: 14px;
       width: 90%;
-      max-width: 300px;
-      border: none;
-      border-radius: 8px;
+      max-width: 320px;
+      border: 1px solid #ccc;
+      border-radius: 10px;
       font-size: 1em;
     }
 
     input[type="submit"] {
-      padding: 12px 24px;
+      padding: 14px 28px;
       background: #000;
       color: #fff;
       border: none;
-      border-radius: 8px;
+      border-radius: 10px;
       font-size: 1em;
       cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    input[type="submit"]:hover {
+      background: #333;
     }
 
     .notification {
-      margin-top: 15px;
+      margin-top: 20px;
       background-color: #d4edda;
       color: #155724;
-      padding: 10px 20px;
-      border-radius: 8px;
+      padding: 12px 20px;
+      border-radius: 10px;
       display: none;
+      animation: fadeIn 0.4s ease-in-out;
       max-width: 90%;
       margin-left: auto;
       margin-right: auto;
       font-size: 0.95em;
     }
 
+    .notification a {
+      color: #0b5e34;
+      font-weight: bold;
+      text-decoration: underline;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(-10px); }
+      to { opacity: 1; transform: translateY(0); }
+    }
+
     .coming-soon {
-      margin-top: 40px;
-      font-size: 1.2em;
+      margin-top: 50px;
+      font-size: 1.25em;
       font-weight: bold;
       color: #990000;
     }
 
     .footer-text {
-      margin-top: 20px;
+      margin-top: 25px;
+      font-style: italic;
     }
 
     .donation {
@@ -90,13 +113,18 @@
     }
 
     .donation button {
-      padding: 12px 25px;
+      padding: 13px 26px;
       background-color: #ff5e78;
       color: white;
       border: none;
-      border-radius: 8px;
+      border-radius: 10px;
       font-size: 1em;
       cursor: pointer;
+      transition: background 0.3s ease;
+    }
+
+    .donation button:hover {
+      background-color: #ff2c53;
     }
 
     .separator {
@@ -112,18 +140,23 @@
 
     .watsup-section h2 {
       color: #d14b6d;
-      font-size: 1.5em;
+      font-size: 1.6em;
     }
 
     .watsup-link {
       display: inline-block;
       margin-top: 20px;
-      padding: 12px 24px;
+      padding: 13px 26px;
       background: #000;
       color: #fff;
       text-decoration: none;
-      border-radius: 8px;
+      border-radius: 10px;
       font-size: 1em;
+      transition: background 0.3s ease;
+    }
+
+    .watsup-link:hover {
+      background: #333;
     }
 
     @media (min-width: 600px) {
@@ -131,50 +164,53 @@
         flex-direction: row;
         justify-content: center;
       }
+
+      input[type="email"] {
+        margin-right: 10px;
+        margin-bottom: 0;
+      }
     }
   </style>
 </head>
 <body>
 
   <h1>👗 FashionFlow</h1>
-  <p>Swipe ton style. L’appli qui rend ton shopping aussi fun que Tinder et intelligent comme TikTok.</p>
+  <p>Swipe ton style ✨ L’appli qui rend ton shopping aussi fun que Tinder et aussi intelligent que TikTok.</p>
 
   <div class="email-form">
-    <p>Sois le premier à découvrir l’appli à sa sortie :</p>
+    <p>🚀 Laisse ton email pour être le premier au courant !</p>
     <form onsubmit="handleSubmit(event)">
       <input type="email" placeholder="Ton email" required id="emailInput">
       <input type="submit" value="Me prévenir">
     </form>
     <div id="notification" class="notification">
-      ✅ Fonctionnalité en cours de développement. Merci pour ton intérêt !<br>
-      👉 En attendant, <a href="wiki.html" style="color: #0b5e34; font-weight: bold; text-decoration: underline;">visite le Wiki de FashionFlow</a> 📚
+      ✅ Merci ! Tu seras informé dès la sortie 📨<br>
+      👉 En attendant, <a href="wiki.html">explore le Wiki de FashionFlow</a> 📚
     </div>
   </div>
 
   <div class="coming-soon">
-    📲 Application en cours de développement. Lancement prévu très bientôt.
+    📲 Application en développement... Lancement très bientôt !
   </div>
 
   <div class="footer-text">
-    <p><em>Une nouvelle façon de shopper, créée par des jeunes, pour les jeunes.</em></p>
+    <p>Une appli mode 100% pensée par des jeunes, pour les jeunes.</p>
   </div>
 
   <div class="donation">
     <p><strong>🙏 Soutiens le projet FashionFlow</strong></p>
-    <p>Ton don nous aide à développer une appli stylée, rapide et gratuite pour tous 🛍️✨</p>
+    <p>Chaque don nous aide à créer une app stylée, rapide et gratuite pour tous 🛍️</p>
     <a href="https://www.paypal.com/donate/?hosted_button_id=WBK2E9QSMYDBC" target="_blank">
       <button>Faire un don 💖</button>
     </a>
   </div>
 
-  <!-- Trait séparateur -->
   <div class="separator"></div>
 
-  <!-- Section What's Up -->
   <div class="watsup-section">
-    <h2>📢 What's Up - Dernières Infos</h2>
-    <p>Retrouve toutes les mises à jour et l’évolution du projet FashionFlow.</p>
-    <a href="whatsup.html" class="watsup-link">🔗 Voir les dernières nouveautés</a>
+    <h2>📢 What's Up ?</h2>
+    <p>Découvre les dernières nouvelles et l’évolution du projet.</p>
+    <a href="whatsup.html" class="watsup-link">🔗 Voir les nouveautés</a>
   </div>
 
   <script>
@@ -187,5 +223,6 @@
       }, 5000);
     }
   </script>
+
 </body>
 </html>
