--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>FashionFlow - Bientôt dispo !</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="2EMHPpggxuAXaqEcfjyaIe7qC1xDxAO6ocThibF5BYI" />
+  <title>FashionFlow - Bientôt disponible</title>
   <style>
     body {
       font-family: 'Segoe UI', 'Arial', sans-serif;
