--- a/whatsup.html
+++ b/whatsup.html
@@ -31,6 +31,7 @@
         <li>Possibilité de voter pour les fonctionnalités à venir.</li>
         <li>Ajout du système de mise à jour par WhatsApp.</li>
         <li>Ajout d’un système de cookies.</li>
+         <li>Refonte de l’interface principale.</li>
       </ul>
     </section>
   </main>
