--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>FashionFlow - Xiaomi style</title>
+  <title>FashionFlow</title>
   <style>
     /* 1) RESET & BASE */
     *, *::before, *::after { box-sizing: border-box; }
@@ -165,13 +165,6 @@
 
   <!--  starfield -->
   <canvas id="starfield"></canvas>
-
-  <!-- overlay choix -->
-  <div id="user-type-overlay" role="dialog" aria-modal="true">
-    <div>Quel type d'utilisateur es-tu ?</div>
-    <button data-type="Visiteur">Visiteur</button>
-    <button data-type="Membre">Membre</button>
-  </div>
 
   <!-- contenu scrollable -->
   <div id="scroll-container">
