--- a/index.html
+++ b/index.html
@@ -171,6 +171,7 @@
     <section id="accueil" class="section active">
       <h1>👗 FashionFlow</h1>
       <p>Swipe ton style ✨ L’appli qui rend ton shopping aussi fun que Tinder et aussi intelligent que TikTok.</p>
+      <p>swip vers le haut pour coninuer</p>
     </section>
 
     <section id="wiki" class="section">
