--- a/whatsup.html
+++ b/whatsup.html
@@ -123,42 +123,12 @@
 
       <div class="space-y-6">
         <div class="timeline-item">
-          <div class="bg-gradient-to-r from-red-50 to-red-100 rounded-lg p-4 border-l-4 border-red-400">
+          <div class="bg-gradient-to-r from-purple-50 to-purple-100 rounded-lg p-4 border-l-4 border-purple-400">
             <div class="flex items-center justify-between mb-2">
-              <span class="text-sm font-semibold text-red-700 bg-red-200 px-3 py-1 rounded-full">08 juin 2025</span>
-              <span class="text-xs text-red-600 font-medium">CORRECTION</span>
+              <span class="text-sm font-semibold text-purple-700 bg-purple-200 px-3 py-1 rounded-full">15 juin 2025</span>
+              <span class="text-xs text-purple-600 font-medium">REFONTE MAJEURE</span>
             </div>
-            <p class="text-gray-800 font-medium">Bug d'affichage dans la section Introduction et Technologie (wiki)</p>
-          </div>
-        </div>
-
-        <div class="timeline-item">
-          <div class="bg-gradient-to-r from-green-50 to-green-100 rounded-lg p-4 border-l-4 border-green-400">
-            <div class="flex items-center justify-between mb-2">
-              <span class="text-sm font-semibold text-green-700 bg-green-200 px-3 py-1 rounded-full">07 juin 2025</span>
-              <span class="text-xs text-green-600 font-medium">NOUVELLE FONCTIONNALITÉ</span>
-            </div>
-            <p class="text-gray-800 font-medium">Ajout du journal des mises à jour (What's up)</p>
-          </div>
-        </div>
-
-        <div class="timeline-item">
-          <div class="bg-gradient-to-r from-yellow-50 to-yellow-100 rounded-lg p-4 border-l-4 border-yellow-400">
-            <div class="flex items-center justify-between mb-2">
-              <span class="text-sm font-semibold text-yellow-700 bg-yellow-200 px-3 py-1 rounded-full">06 juin 2025</span>
-              <span class="text-xs text-yellow-600 font-medium">CORRECTION MAJEURE</span>
-            </div>
-            <p class="text-gray-800 font-medium">Correction d'un bug majeur lié à l'ajout du Wiki</p>
-          </div>
-        </div>
-
-        <div class="timeline-item">
-          <div class="bg-gradient-to-r from-blue-50 to-blue-100 rounded-lg p-4 border-l-4 border-blue-400">
-            <div class="flex items-center justify-between mb-2">
-              <span class="text-sm font-semibold text-blue-700 bg-blue-200 px-3 py-1 rounded-full">05 juin 2025</span>
-              <span class="text-xs text-blue-600 font-medium">CONTENU</span>
-            </div>
-            <p class="text-gray-800 font-medium">Ajout du Wiki FashionFlow avec 9 sections détaillées</p>
+            <p class="text-gray-800 font-medium">Refonte complète de l'interface d'accueil, de mise à jour et du wiki</p>
           </div>
         </div>
       </div>
@@ -179,13 +149,21 @@
       <div class="grid md:grid-cols-2 gap-6">
         <div class="bg-gradient-to-br from-indigo-50 to-indigo-100 p-6 rounded-xl border border-indigo-200">
           <div class="flex items-center mb-3">
+            <span class="feature-icon text-2xl mr-3">📚</span>
+            <h3 class="font-semibold text-gray-800">Amélioration des catégories du wiki</h3>
+          </div>
+          <p class="text-gray-600 text-sm">Optimisation et restructuration des catégories du Wiki FashionFlow</p>
+        </div>
+
+        <div class="bg-gradient-to-br from-emerald-50 to-emerald-100 p-6 rounded-xl border border-emerald-200">
+          <div class="flex items-center mb-3">
             <span class="feature-icon text-2xl mr-3">💬</span>
             <h3 class="font-semibold text-gray-800">Système de commentaires</h3>
           </div>
           <p class="text-gray-600 text-sm">Ajout d'un système de commentaires sur chaque section du Wiki</p>
         </div>
 
-        <div class="bg-gradient-to-br from-emerald-50 to-emerald-100 p-6 rounded-xl border border-emerald-200">
+        <div class="bg-gradient-to-br from-orange-50 to-orange-100 p-6 rounded-xl border border-orange-200">
           <div class="flex items-center mb-3">
             <span class="feature-icon text-2xl mr-3">❓</span>
             <h3 class="font-semibold text-gray-800">FAQ</h3>
@@ -193,7 +171,7 @@
           <p class="text-gray-600 text-sm">Création d'une page "Foire aux questions (FAQ)"</p>
         </div>
 
-        <div class="bg-gradient-to-br from-orange-50 to-orange-100 p-6 rounded-xl border border-orange-200">
+        <div class="bg-gradient-to-br from-blue-50 to-blue-100 p-6 rounded-xl border border-blue-200">
           <div class="flex items-center mb-3">
             <span class="feature-icon text-2xl mr-3">🗳️</span>
             <h3 class="font-semibold text-gray-800">Système de vote</h3>
@@ -216,14 +194,6 @@
           </div>
           <p class="text-gray-600 text-sm">Ajout d'un système de cookies pour l'expérience utilisateur</p>
         </div>
-
-        <div class="bg-gradient-to-br from-pink-50 to-pink-100 p-6 rounded-xl border border-pink-200">
-          <div class="flex items-center mb-3">
-            <span class="feature-icon text-2xl mr-3">🎨</span>
-            <h3 class="font-semibold text-gray-800">Nouvelle interface</h3>
-          </div>
-          <p class="text-gray-600 text-sm">Refonte complète de l'interface principale</p>
-        </div>
       </div>
     </section>
   </main>
@@ -243,7 +213,7 @@
           © 2025 FashionFlow - Tous droits réservés
         </p>
         <p class="text-gray-500">
-          Version 1.2.4 • Dernière mise à jour : 08 juin 2025
+          Version 1.2.4 • Dernière mise à jour : 15 juin 2025
         </p>
       </div>
     </div>
