--- a/index.html
+++ b/index.html
@@ -447,15 +447,11 @@
 
     // Fonctions de navigation
     function goToWiki() {
-      // Simulation de navigation
-      console.log('Navigation vers wiki.html');
-      alert('Navigation vers le Wiki (fonctionnalité à implémenter)');
+      window.location.href = 'wiki.html';
     }
 
     function goToNews() {
-      // Simulation de navigation
-      console.log('Navigation vers whatsup.html');
-      alert('Navigation vers les News (fonctionnalité à implémenter)');
+      window.location.href = 'whatsupp.html';
     }
 
     function donate() {
