--- a/whatsup.html
+++ b/whatsup.html
@@ -201,12 +201,12 @@
   <!-- Footer avec bouton de retour -->
   <footer class="bg-white border-t border-gray-200 mt-16">
     <div class="max-w-6xl mx-auto px-6 py-12 text-center">
-      <div class="mb-8">
-        <a href="index.html" class="btn-primary text-white font-semibold py-4 px-8 rounded-xl inline-flex items-center space-x-2 text-lg">
-          <span>←</span>
-          <span>Retour à l'accueil</span>
-        </a>
-      </div>
+            </div>
+      <p class="text-gray-500 text-sm">© 2025 FashionFlow. Tous droits réservés.</p>
+    </div>
+</body>
+</html>
+
       
       <div class="border-t border-gray-200 pt-8">
         <p class="text-gray-600 font-medium text-lg mb-2">
