--- a/problematique.html
+++ b/problematique.html
@@ -306,7 +306,7 @@
                 </div>
             </div>
 
-            <a href="#" class="back-button">
+            <a href="wiki.html" class="back-button">
                 ⬅️ Retour au Sommaire
             </a>
         </div>
